# slidedown

./: .coverage  .env.example  .gitattributes  .gitignore  CHECKPOINT.md  CONTRIBUTING.adoc  Makefile  README.md  SESSION_SUMMARY.md  WIP-refactor.md  WIP.md  pyproject.toml  requirements.txt  slideshow
.github/workflows/: compile-readme-presentation.yml
assets/css/: slidedown.css
assets/html/: footer.html  head-lcars.html  head.html  navbar.html
assets/js/: slidedown.js
docs/: lcars.adoc  sd-guide.adoc  tips-n-tricks.adoc
docs/readme-presentation/: README.md  index.html
docs/readme-presentation/css/: slidedown.css  theme.css
docs/readme-presentation/js/: slidedown.js
docs/readme-presentation/logos/: slidedown-logo.drawio
examples/: css-test.sd  linebreak-test.sd
examples/code/: README.md  code.sd
examples/comprehensive/: README.md  comprehensive.sd
examples/lcars-demo/: lcars-test.sd
examples/minimal/: README.md  minimal-meta-test.sd  minimal.sd
examples/navbar-test/: navbar-test.sd
examples/watermarked/: README.md  light-watermarks-demo.sd
src/: __init__.py  __main__.py
src/config/: __init__.py  settings.py
src/lib/: __init__.py  compiler.py  directives.py  lexer.py  log.py  parser.py  theme.py
src/models/: __init__.py  directives.py  parser.py  state.py
tests/: __init__.py  test_e2e_compilation.py  test_parser_basic.py  test_parser_escaping.py  test_parser_modifiers.py  test_parser_nesting.py
themes/conventional-light/: theme.css  theme.yaml
themes/default/: theme.css  theme.yaml
themes/lcars-lower-decks/: slidedown-lcars-adapter.css  theme.css  theme.yaml
themes/lcars-lower-decks/templates/: lcars-data-cascade.html  lcars-frame.html  lcars-scripts.js
themes/retro-terminal/: theme.yaml
themes/terminal/: theme.css  theme.yaml
