[project]
name = "slidedown"
version = "1.1.0"
description = "Text-first presentation compiler with behavioral markup"
authors = [
    {name = "Rudolph Pienaar", email = "rudolph.pienaar@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["presentation", "slides", "compiler", "markup", "latex-inspired"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "chris_plugin>=0.4.0",
    "pyfiglet>=1.0.2",
    "cowsay>=6.1",
    "loguru>=0.7.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pygments>=2.17.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/FNNDSC/slidedown"
Documentation = "https://slidedown.readthedocs.io"
Repository = "https://github.com/FNNDSC/slidedown"
Issues = "https://github.com/FNNDSC/slidedown/issues"

[project.scripts]
slidedown = "slidedown.__main__:main"

[tool.setuptools.package-data]
slidedown = ["assets/**/*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["slidedown"]
package-dir = {"slidedown" = "src"}

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--cov=slidedown",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
